--- a/codigo/public/assets/css/style.css
+++ b/codigo/public/assets/css/style.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
   background-color: #f4f4f4;
   height: 100%;
-  margin: 0;
   display: flex;
   flex-direction: column;
 }
@@ -109,7 +108,6 @@ blockquote {
   border-radius: 5px;
 }
 
-
 .compartilhar {
   margin-top: 20px;
   padding: 10px 0;
@@ -121,7 +119,7 @@ blockquote {
   padding: 6px 10px;
   text-decoration: none;
   color: white;
-  background-color: #4267B2; 
+  background-color: #4267B2;
   border-radius: 4px;
 }
 
@@ -131,4 +129,43 @@ blockquote {
 
 #compartilhar-whatsapp {
   background-color: #25D366;
+}
+
+.modo-escuro {
+  background-color: #333;
+  color: white;
+}
+
+/* Estilo comum para os novos botões */
+.btn {
+  padding: 8px 12px;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  color: white;
+}
+
+.btn-dark {
+  background-color: #343a40;
+  color: white;
+}
+
+.btn-info {
+  background-color: #17a2b8;
+  color: white;
+}
+
+.btn-warning {
+  background-color: #ffc107;
+  color: black;
+}
+
+.btn-danger {
+  background-color: #dc3545;
+  color: white;
 }
